<resources>
    <string name="app_name">PDM18_ScrollableTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_product_share">SHARE</string>
    <string name="item_product_see_more">SEE MORE</string>
    <string name="tab_title_0">Technology</string>
    <string name="tab_title_1">Home</string>
    <string name="tab_title_2">Electronics</string>
    <string name="activity_login_user_hint">Usuario</string>
    <string name="activity_login_password_hint">Contraseña</string>
    <string name="activity_login_button_text">LOGIN</string>
    <string name="USERNAME_PREFERENCE">USER</string>
    <string name="PASSWORD_PREFERENCE">PWD</string>
    <string name="LOGGED_PREFERENCE">LOGGED</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
</resources>
