<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iteso.pdm18_scrollabletabs.ActivityLogin"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <EditText
            android:id="@+id/activity_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_user_hint"/>
        <EditText
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/activity_login_password_hint"/>
    </LinearLayout>

    <Button
        android:id="@+id/activity_login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_button_text"/>
</LinearLayout>
