<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_view_height"
    android:layout_margin="@dimen/card_view_margin"
    android:scrollbarStyle="outsideOverlay"
    card_view:cardCornerRadius="@dimen/card_view_radius">

    <RelativeLayout
        android:id="@+id/item_product_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_product_layout_height">

        <ImageView
            android:id="@+id/item_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_product_image_height"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/mac"/>

        <TextView
            android:id="@+id/item_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/item_product_image"
            android:layout_gravity="bottom"
            android:background="@color/colorProductTitle"
            android:gravity="center"
            android:paddingBottom="@dimen/item_product_title_padding_bottom"
            android:paddingTop="@dimen/item_product_title_padding_top"
            android:textColor="@android:color/white"
            android:textSize="@dimen/item_product_title_text_size"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/card_home_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_product_image"
            android:layout_marginTop="@dimen/card_home_info_margin_top"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/item_product_thumbnail"
                android:layout_width="@dimen/item_product_thumbnail_width"
                android:layout_height="@dimen/item_product_thumbnail_height"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:src="@drawable/bestbuy">

            </ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_product_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorStoreTitle"/>

                <TextView
                    android:id="@+id/item_product_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLocationTitle"/>

                <TextView
                    android:id="@+id/item_product_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/item_product_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/card_home_info"
            android:layout_below="@id/card_home_info"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/item_product_share"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/item_product_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_home_info"
            android:layout_toEndOf="@id/item_product_share"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/item_product_see_more"
            android:textColor="@color/colorDetailTitle"/>


    </RelativeLayout>
</android.support.v7.widget.CardView>
